<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        app:cardElevation="3dp"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#9CD8D8D3"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <TextView
                        android:id="@+id/textViewItemEN"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center"
                        tools:text="@string/hint_et_english"
                        android:textColor="#327134"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textViewItemVI"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center"
                        tools:text="@string/hint_et_vietnamese"
                        android:textColor="#A61106"
                        android:textSize="24sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <Button
                        android:id="@+id/buttonItemMemorized"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="3"
                        android:background="@drawable/custom_button_red"
                        tools:text="@string/btn_memorized"
                        android:textAllCaps="false"
                        android:textColor="#fff"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/buttonItemRemove"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="@drawable/custom_button_yellow"
                        android:text="@string/btn_remove"
                        android:textAllCaps="false"
                        android:textSize="20sp" />

                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>