<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/custom_button_green"
        android:text="+"
        android:textColor="#fff"
        android:textSize="24sp" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewGroupAdding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="5dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#9CD8D8D3"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/hint_et_english"
                    android:id="@+id/textInputLayoutEn"
                    app:boxBackgroundColor="#fff"
                    app:boxCornerRadiusBottomEnd="5dp"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    app:boxCornerRadiusTopStart="5dp"
                    app:boxStrokeColor="#03A9F4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textinputEN"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#fff"
                        android:textSize="20sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_et_vietnamese"
                    app:boxBackgroundColor="#fff"
                    app:boxCornerRadiusBottomEnd="5dp"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    app:boxCornerRadiusTopStart="5dp"
                    app:boxStrokeColor="#03A9F4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textinputVI"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <Button
                        android:id="@+id/buttonSave"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="3"
                        android:background="@drawable/custom_button_green"
                        android:text="@string/btn_add_word"
                        android:textAllCaps="false"
                        android:textColor="#fff"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/buttonCancel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="@drawable/custom_button_red"
                        android:text="@string/btn_cancel"
                        android:textAllCaps="false"
                        android:textColor="#fff"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </androidx.cardview.widget.CardView>

    <Spinner
        android:background="@drawable/custom_spinner"
        android:id="@+id/spnFilter"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:tooltipText="Filter" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleViewWords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

</LinearLayout>